--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "expo-camera": "~13.2.1",
-    "expo-image-picker": "~14.1.1"
+    "expo-image-picker": "~14.1.1",
+    "react-native-web": "~0.18.10",
+    "react-dom": "18.2.0",
+    "@expo/webpack-config": "^18.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
