--- a/package.json
+++ b/package.json
@@ -9,28 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
     "@react-native-firebase/app": "^17.4.3",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.15",
+    "expo-camera": "~13.2.1",
     "expo-dev-client": "~2.2.1",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.21.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-gesture-handler": "^2.10.0",
     "react-native-paper": "^5.7.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.10",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "expo-camera": "~13.2.1",
-    "expo-image-picker": "~14.1.1",
-    "react-native-web": "~0.18.10",
-    "react-dom": "18.2.0",
-    "@expo/webpack-config": "^18.0.1"
+    "yet": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
