--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-camera": "~13.2.1",
     "expo-dev-client": "~2.2.1",
     "expo-image-picker": "~14.1.1",
+    "expo-splash-screen": "^0.18.2",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.21.0",
     "react": "18.2.0",
