--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "instagram-clone",
-    "slug": "instagram-clone",
+    "name": "Instagram",
+    "slug": "Instagram",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/insta-icon.png",
