--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.7",
     "react-native-gesture-handler": "^2.10.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-paper": "^5.7.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
